DTSCCI-269 Remove code smell