@@ -82,7 +82,7 @@ public class GenerateLipClaimFormCallBackHandler extends CallbackHandler {
         // Remove Draft form from documents
         if (event == GENERATE_LIP_CLAIMANT_CLAIM_FORM_SPEC) {
             systemGeneratedCaseDocuments = systemGeneratedCaseDocuments.stream().filter(claimDoc -> claimDoc.getValue().getDocumentType() != DocumentType.DRAFT_CLAIM_FORM)
-                .collect(Collectors.toList());
+                .toList();
         }
 
         return caseData.toBuilder()
